--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./Develop/Assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -33,6 +33,7 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+   
     <div class="container-lg px-5">
       <div id="hour-1" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">1AM</div>
@@ -210,6 +211,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="script.js"></script>
+    <script src="./Develop/Assets/script.js"></script>
   </body>
 </html>
